Add custom style override for site

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -43,6 +43,7 @@
     </script>
 </head>
 <body>
+    <link rel="stylesheet" type="text/css" href="site.css" />
     <sqx-app>
         <div class="loading">
             <img src="./images/loader.gif" />
